W1 - Basic Layout - Half Done

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout Review | Declan Ruediger | WDD131</title>
+    <meta name="description" content="Layout Review Task">
+    <meta name="author" content="Declan Paul Ruediger">
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
+
 <body>
     <header>
         <h1>Header Content</h1>
@@ -25,4 +30,5 @@
         Footer Content
     </footer>
 </body>
+
 </html>
