W1 - Basic Layout - CSS error fix

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Review | Declan Ruediger | WDD131</title>
+    <title>Layout Review | Declan Paul Ruediger | WDD131</title>
     <meta name="description" content="Layout Review Task">
     <meta name="author" content="Declan Paul Ruediger">
     <link rel="stylesheet" href="styles/layout.css">
