--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -14,7 +14,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Chewy&family=Fredoka&display=swap" rel="stylesheet">
 
-    <script src="scripts/getdates.js" defer></script>
+    <script src="../../scripts/getdates.js" defer></script>
 </head>
 
 <body>
