Text Updates to meet Page Audit Requirements

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples</title>
-    <meta name="description" content="Temples site for WDD 131 - Dynamic Web Fundamentals. Coursework Website coded by Declan Paul Ruediger. This home page with link to the other pages in the project.">
+    <title>Temple Album</title>
+    <meta name="description" content="Temple Album site for WDD 131 - Dynamic Web Fundamentals. Coursework Website coded by Declan Paul Ruediger. This home page with link to the other pages in the project.">
     <meta name="author" content="Declan Paul Ruediger">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/filtered-temples.css">
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <h1>Declan Paul Ruediger</h1>
+        <h1>Temple Album</h1>
         <div id="temples-container" class="card-container">
             <figure>
                 <img src="images/smiling_rafter.webp" alt="">
